--- a/SmartEcoA/ClientApp/src/i18n/messages.kk.xlf
+++ b/SmartEcoA/ClientApp/src/i18n/messages.kk.xlf
@@ -383,7 +383,7 @@
         
         
         
-      <context-group purpose="location"><context context-type="sourcefile">app/administration/administration.component.html</context><context context-type="linenumber">26</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/administration/administration.component.html</context><context context-type="linenumber">25</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/administration/administration.component.html</context><context context-type="linenumber">24</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/dashboard/dashboard.component.html</context><context context-type="linenumber">123</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/posts/index.component.html</context><context context-type="linenumber">2</context></context-group></trans-unit><trans-unit id="Data" datatype="html">
+      <context-group purpose="location"><context context-type="sourcefile">app/administration/administration.component.html</context><context context-type="linenumber">26</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/administration/administration.component.html</context><context context-type="linenumber">25</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/administration/administration.component.html</context><context context-type="linenumber">24</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/dashboard/dashboard.component.html</context><context context-type="linenumber">128</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/posts/index.component.html</context><context context-type="linenumber">2</context></context-group></trans-unit><trans-unit id="Data" datatype="html">
         <source>Data</source><target state="new">Деректер</target>
         
       <context-group purpose="location"><context context-type="sourcefile">app/postdatas/list.component.html</context><context context-type="linenumber">27</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/postdatas/list.component.html</context><context context-type="linenumber">51</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/postdatas/details.component.html</context><context context-type="linenumber">9</context></context-group></trans-unit><trans-unit id="CreateNewDataProvider" datatype="html">
@@ -1234,7 +1234,13 @@
       <trans-unit id="AmountExceedances" datatype="html">
         <source>Amount Exceedances</source>
         <target state="translated">Ауыстыру саны</target>
-      <context-group purpose="location"><context context-type="sourcefile">app/dashboard/dashboard.component.html</context><context context-type="linenumber">109</context></context-group></trans-unit>
+      <context-group purpose="location"><context context-type="sourcefile">app/dashboard/dashboard.component.html</context><context context-type="linenumber">109</context></context-group></trans-unit><trans-unit id="Version" datatype="html">
+        <source>Version</source><target state="new">Нұсқа</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/dashboard/dashboard.component.html</context>
+          <context context-type="linenumber">114</context>
+        </context-group>
+      </trans-unit>
     </body>
   </file>
 </xliff>
